Fixed the capitalization method on the elongator
Lowercase names stay lowercase and uppercase names don't repeat the uppercase.

--- a/week3/CreativeCalculator.ipynb
+++ b/week3/CreativeCalculator.ipynb
@@ -294,23 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input a verb, e.g. \"love\" or \"enjoy\". love\n",
-      "Please input a second verb, e.g. \"appreciate\" or \"devour\". eat\n",
-      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". fancy feast\n",
+      "Please input a verb, e.g. \"love\" or \"enjoy\". fight\n",
+      "Please input a second verb, e.g. \"appreciate\" or \"devour\". find\n",
+      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". Apples\n",
       "┏┓\n",
       "┃┃╱╲ In this\n",
       "┃╱╱╲╲ house\n",
-      "╱╱╭╮╲╲ we love\n",
-      "▔▏┗┛▕▔ & eat\n",
+      "╱╱╭╮╲╲ we fight\n",
+      "▔▏┗┛▕▔ & find\n",
       "╱▔▔▔▔▔▔▔▔▔▔╲\n",
-      "fancy feast \n",
+      "   Apples   \n",
       "╱╱┏┳┓╭╮┏┳┓ ╲╲\n",
       "▔▏┗┻┛┃┃┗┻┛▕▔\n"
      ]
@@ -346,45 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for word in most_common_words:\n",
-    "#     spaces = \" \"*len(word)\n",
-    "#     # Creating the test_replace dictionary\n",
-    "#     test_replace = {\" \" + word + \" \":\" \" + spaces + \" \",\n",
-    "#                     \"\\n\" + word + \" \":\"\\n\" + spaces + \" \",\n",
-    "#                     \"\\n\" + word + \" \":\"\\n\" + spaces + \" \",\n",
-    "#                     \" \" + word + \"\\n\":\" \" + spaces + \"\\n\"}\n",
-    "#     for punct in string.punctuation:\n",
-    "#         test_replace.update({punct + word + \" \":punct + spaces + \" \",\n",
-    "#                         \" \" + word + punct:\" \" + spaces + punct,\n",
-    "#                         punct + word + \"\\n\":punct + spaces + \"\\n\",\n",
-    "#                          punct + word + \"\\n\":punct + spaces + \"\\n\",\n",
-    "#                         \"\\n\" + word + punct:\"\\n\" + spaces + punct,\n",
-    "#                         \"\\n\" + word + punct:\"\\n\" + spaces + punct})\n",
-    "#     for test in test_replace:\n",
-    "#         if(losing.lower().find(test) != -1):\n",
-    "#             losing = losing.replace(test, test_replace[test])\n",
-    "#             lost_words.append(word)\n",
-    "#             if(len(lost_words)%5 == 0 or len(lost_words) == 71):\n",
-    "#                 print(losing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 96,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your name. Okay\n",
+      "Please input your name. anastasiA\n",
       "\n",
       "\n",
-      "Oookaaay❣️\n",
+      "aaanaaastaaasiiiAaa❣️\n",
       "⊂_ヽ\n",
       "　 ＼＼\n",
       "　　 ＼( ͡° ͜ʖ ͡°)\n",
@@ -424,21 +398,24 @@
     "def elongate():\n",
     "    \n",
     "    name=input(\"Please input your name. \")\n",
-    "    vowels=\"AaEeIiOoUu\"\n",
-    "    indexes=[]\n",
-    "    name=name.lower()\n",
-    "    \n",
+    "    # List starts with the lowercase vowels so that we check for uppercase ones last and they get replaced last.\n",
+    "    # Otherwise the replacements get tripled.\n",
+    "    vowels=\"aeiouyAEIOUY\"\n",
+    "\n",
+    "    # For each vowel in the list, starting with the lowercase ones,\n",
     "    for vowel in vowels:\n",
-    "        if(name.find(vowel) != -1 and vowel.islower()):\n",
+    "        # If you find it in the name and it's uppercase in the name,\n",
+    "        if(name.find(vowel) != -1 and name[name.find(vowel)].isupper()):\n",
+    "            # Replace it with itself (uppercase) once and its lowercase version twice\n",
+    "            name = name.replace(vowel, vowel + vowel.lower()*2)\n",
+    "        # Otherwise, if you find it in the name and it's lowercase in the name,\n",
+    "        elif(name.find(vowel) != -1 and name[name.find(vowel)].islower()):\n",
+    "            # Replace it with itself (lowercase) three times\n",
     "            name = name.replace(vowel, vowel*3)            \n",
-    "#         elif(name.find(vowel) != -1 and vowel.isupper()):\n",
-    "#             name = name.replace(vowel, vowel + vowel.lower()*2)\n",
-    "    name=name.title()\n",
     "    \n",
-    "    print(\"\\n\\n\"+name+'❣️'+dude)\n",
-    "#                 name_letters.insert(index,letter*2) <-- infinite loop\n",
-    "    \n",
-    "    \n",
+    "    # And print it out.\n",
+    "    print(\"\\n\\n\"+name+'❣️'+dude)    \n",
+    "\n",
     "elongate()"
    ]
   },
