--- a/week3/CreativeCalculator.ipynb
+++ b/week3/CreativeCalculator.ipynb
@@ -27,7 +27,10 @@
     "\n",
     "fruit_basket = {'apple': 1, 'bananas': 2, 'cantelopes': 3, 'dates': 4, 'figs': 5, 'grapes': 6, 'tangerines': 7, 'watermelon': 8, 'avocado': 9, 'strawberries': 10}\n",
     "for fruit,count in fruit_basket.items():\n",
-    "    print(fruit)"
+    "    print(fruit)\n",
+    "    \n",
+    "# for fruit in fruit_basket:\n",
+    "#   print(fruit)"
    ]
   },
   {
@@ -114,7 +117,8 @@
     "\n",
     "b) A function can take an unlimited number of arguments.\n",
     "c) A Python function can return multiple values\n",
-    "d) Python function doesn’t return anything unless and until you add a return statement\n"
+    "# d) Python function doesn’t return anything unless and until you add a return statement\n",
+    "# wrong! b and c only\n"
    ]
   },
   {
@@ -123,9 +127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6)Python function always returns a value\n",
+    "# 6) Python function always returns a value\n",
     "\n",
-    "False. It only returns a value if you add a return statement inside."
+    "# False. It only returns a value if you add a return statement inside.\n",
+    "# wrong! \n",
+    "Answer True, If you do not include any return statement in function, it automatically returns None. So, in Python function always returns a value."
    ]
   },
   {
@@ -183,7 +189,9 @@
     "# else:\n",
     "#   print('False')\n",
     "\n",
-    "True. a is being added to b, so the if statement condition is fulfilled."
+    "True. a is being added to b, so the if statement condition is fulfilled.\n",
+    "\n",
+    "# any non-zero value is True"
    ]
   },
   {
@@ -294,23 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input a verb, e.g. \"love\" or \"enjoy\". fight\n",
-      "Please input a second verb, e.g. \"appreciate\" or \"devour\". find\n",
-      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". Apples\n",
+      "Please input a verb, e.g. \"love\" or \"enjoy\". eat\n",
+      "Please input a second verb, e.g. \"appreciate\" or \"devour\". drink\n",
+      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". waffle\n",
       "┏┓\n",
       "┃┃╱╲ In this\n",
       "┃╱╱╲╲ house\n",
-      "╱╱╭╮╲╲ we fight\n",
-      "▔▏┗┛▕▔ & find\n",
+      "╱╱╭╮╲╲ we eat\n",
+      "▔▏┗┛▕▔ & drink\n",
       "╱▔▔▔▔▔▔▔▔▔▔╲\n",
-      "   Apples   \n",
+      "   waffle   \n",
       "╱╱┏┳┓╭╮┏┳┓ ╲╲\n",
       "▔▏┗┻┛┃┃┗┻┛▕▔\n"
      ]
@@ -346,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -355,10 +363,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input your name. anastasiA\n",
+      "Please input your name. Anya anya\n",
       "\n",
       "\n",
-      "aaanaaastaaasiiiAaa❣️\n",
+      "Aaanyyyaaa aaanyyyaaa❣️\n",
       "⊂_ヽ\n",
       "　 ＼＼\n",
       "　　 ＼( ͡° ͜ʖ ͡°)\n",
