--- a/week4/ObjectsOfDesire.ipynb
+++ b/week4/ObjectsOfDesire.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tell me a memory of this place: ok\n"
+      "Tell me a memory of this place: I biked here by myself in the summer and laid on a hilltop watching the dragonflies flying above me and reading Claudia Rankine's Citizen.\n"
      ]
     }
    ],
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ok\n"
+      "Petra rode a Citibike all the way here with me on their lil legs. We walked our bikes into the dirt trails through the trees and sat on the rocks by the ocean, all sweaty. The Citibike bill was like 50 dollars.\n"
      ]
     }
    ],
@@ -287,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "school = Place('6 E 16th St New York')"
+    "school=Place('6 E 16th St New York')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,24 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 E 16th St New York is in Manhattan.\n"
-     ]
-    }
-   ],
-   "source": [
-    "school.neighborhood()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,15 +318,6 @@
    ],
    "source": [
     "school.distance()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "school.new_memory()"
    ]
   },
   {
