--- a/week5/MapIt.ipynb
+++ b/week5/MapIt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You've seen the matplotlib examples in class. Explore the library and create your at least 3 plot of personal data. Personal data can be the abstract or literal. Here are some examples: \n",
+    "You've seen the matplotlib examples in class. Explore the library and create your at least 3 plot of personal data (same dataset, but with 3 different visuals). Personal data can be the abstract or literal. Here are some examples: \n",
     "\n",
     "* collections of plants you own \n",
     "* food you ate during the day \n",
@@ -105,7 +105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
