--- a/week3/CreativeCalculator.ipynb
+++ b/week3/CreativeCalculator.ipynb
@@ -309,16 +309,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please input a verb, e.g. \"love\" or \"enjoy\". eat\n",
-      "Please input a second verb, e.g. \"appreciate\" or \"devour\". drink\n",
-      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". waffle\n",
+      "Please input a verb, e.g. \"love\" or \"enjoy\". croon\n",
+      "Please input a second verb, e.g. \"appreciate\" or \"devour\". dream\n",
+      "Please input a noun, e.g. \"Caroline Polachek\" or \"umbrellas\". Caroline Polachek\n",
       "┏┓\n",
       "┃┃╱╲ In this\n",
       "┃╱╱╲╲ house\n",
-      "╱╱╭╮╲╲ we eat\n",
-      "▔▏┗┛▕▔ & drink\n",
+      "╱╱╭╮╲╲ we croon\n",
+      "▔▏┗┛▕▔ & dream\n",
       "╱▔▔▔▔▔▔▔▔▔▔╲\n",
-      "   waffle   \n",
+      "Caroline Polachek\n",
       "╱╱┏┳┓╭╮┏┳┓ ╲╲\n",
       "▔▏┗┻┛┃┃┗┻┛▕▔\n"
      ]
@@ -354,37 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please input your name. Anya anya\n",
-      "\n",
-      "\n",
-      "Aaanyyyaaa aaanyyyaaa❣️\n",
-      "⊂_ヽ\n",
-      "　 ＼＼\n",
-      "　　 ＼( ͡° ͜ʖ ͡°)\n",
-      "　🌸　 >　⌒ヽ\n",
-      "　　　/ 　 へ＼  🌸\n",
-      "　　 /　　/　＼＼\n",
-      "✨  ﾚ　ノ　　 ヽ_つ\n",
-      "　　/　/\n",
-      "　 /　/|   ✨\n",
-      "　(　(ヽ 🌸  ✨\n",
-      "　|　|、＼\n",
-      "　| 丿 ＼ ⌒)       🌸\n",
-      "　| |　　) /    🌸\n",
-      "ノ )　　( ﾉ  ✨\n",
-      "(_／\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dude='''\n",
     "⊂_ヽ\n",
