--- a/week10/open-ai-demo.ipynb
+++ b/week10/open-ai-demo.ipynb
@@ -13,17 +13,48 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/shirley/anaconda3/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n",
-      "/Users/shirley/anaconda3/lib/python3.7/site-packages/pandas/compat/_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.9' currently installed).\n",
-      "  warnings.warn(msg, UserWarning)\n"
+      "Collecting openai\n",
+      "  Downloading openai-0.27.2-py3-none-any.whl (70 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.1/70.1 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.20 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from openai) (2.28.1)\n",
+      "Collecting aiohttp\n",
+      "  Downloading aiohttp-3.8.4-cp39-cp39-macosx_10_9_x86_64.whl (360 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m360.3/360.3 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: tqdm in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from openai) (4.64.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from requests>=2.20->openai) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from requests>=2.20->openai) (1.26.11)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from requests>=2.20->openai) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from requests>=2.20->openai) (2.0.4)\n",
+      "Collecting aiosignal>=1.1.2\n",
+      "  Downloading aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /Users/gabriel/opt/anaconda3/lib/python3.9/site-packages (from aiohttp->openai) (21.4.0)\n",
+      "Collecting frozenlist>=1.1.1\n",
+      "  Downloading frozenlist-1.3.3-cp39-cp39-macosx_10_9_x86_64.whl (36 kB)\n",
+      "Collecting multidict<7.0,>=4.5\n",
+      "  Downloading multidict-6.0.4-cp39-cp39-macosx_10_9_x86_64.whl (29 kB)\n",
+      "Collecting async-timeout<5.0,>=4.0.0a3\n",
+      "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+      "Collecting yarl<2.0,>=1.0\n",
+      "  Downloading yarl-1.8.2-cp39-cp39-macosx_10_9_x86_64.whl (61 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.2/61.2 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: multidict, frozenlist, async-timeout, yarl, aiosignal, aiohttp, openai\n",
+      "Successfully installed aiohttp-3.8.4 aiosignal-1.3.1 async-timeout-4.0.2 frozenlist-1.3.3 multidict-6.0.4 openai-0.27.2 yarl-1.8.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
+   "source": [
+    "pip install openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#guide https://beta.openai.com/docs/developer-quickstart/python-bindings\n",
     "#make sure you download pip install openai (pip3 if you have multiple versions of python installed on your computer)\n",
@@ -35,16 +66,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'openai' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/lj/gz81psj55xg1_fm6jfz2vbn80000gn/T/ipykernel_15632/2740324557.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mopenai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"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\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'openai' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "openai.api_key = \"INSERT YOUR API KEY HERE\""
+    "openai.api_key = \"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\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,12 +164,12 @@
    "outputs": [],
    "source": [
     "response = openai.Completion.create(\n",
-    "  model=\"text-davinci-001\",\n",
+    "  model=\"text-davinci-001\", # Good at instructions.\n",
     "  prompt=\"Explain machine learning in a short sentence.\",\n",
     "  temperature=0.4, #randomness \n",
-    "  max_tokens=64, #charaters in response \n",
+    "  max_tokens=64, #characters in response \n",
     "  top_p=1, #controls diversity\n",
-    "  frequency_penalty=0, #decrease repetition \n",
+    "  frequency_penalty=0, #decrease repetition at 0\n",
     "  presence_penalty=0 #increase likelihood to talk about new topic \n",
     ")"
    ]
@@ -631,7 +674,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -645,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
